--- a/public/css/layout/index.scss
+++ b/public/css/layout/index.scss
@@ -3,7 +3,8 @@
 
 @import '_grid.scss';
 @import '_header.scss';
-@import '_footer.scss';
+@import 'footer';
 @import '_sidebar.scss';
 @import '_forms.scss';
+//@import "footer";
 @import "content";
